1. make Menu2Bar/Menu2BarItem leverage PopupMenu2/MenuItem2 base classes more 2. fix space between MenuBar2 and Menu 3. fix unwanted word wrap on shadow text in IE
git-svn-id: http://svn.dojotoolkit.org/src@4486 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlMenu2.css
+++ b/trunk/src/widget/templates/HtmlMenu2.css
@@ -9,7 +9,7 @@
 	margin-bottom: 1px;
 }
 
-.dojoMenuItem2 {
+.dojoMenuItem2, .dojoMenuItem2 span span {
 	white-space: nowrap;
 	font: menu;
 	color: WindowText;
